Addressed mentor's feedback